# anomaly

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  anomaly.json  anomaly.spec  pyproject.toml
cpp/: CMakeLists.txt
cpp/include/az/: bitboard.h  board.h  encoding.h  inference_queue.h  magic.h  mcts.h  movegen.h  node.h  selfplay.h  types.h
cpp/src/: bindings.cpp  board.cpp  encoding.cpp  inference_queue.cpp  magic.cpp  mcts.cpp  movegen.cpp  node.cpp  selfplay.cpp
cpp/tests/: test_perft.cpp
python/az/: __init__.py  brain.py  checkpoint.py  config.py  core_compat.py  keepalive.py  process_memory.py  search.py  session.py
python/az/eval/: arena.py  baselines.py
python/az/gui/: app.py  board_anim.py  board_view.py  games_panel.py  main_window.py  mcts_panel.py  metrics_panel.py  mini_board_view.py  multi_game_grid.py  piece_assets.py  play_mode.py  solo_game_dialog.py  theme.py
python/az/ipc/: events.py
python/az/network/: resnet.py
python/az/scripts/: benchmark.py  play.py  train.py
python/az/training/: central_learner.py  inference_server.py  learner.py  orchestrator.py  replay_buffer.py  selfplay_worker.py  stockfish.py  stockfish_critic.py  stockfish_paths.py
scripts/: build_anomaly.py  debug_integration.py  train_headless.py
tests/: conftest.py  test_brain.py  test_central_learner.py  test_encoding.py  test_events.py  test_learner_overfit.py  test_legal_moves.py  test_mcts_integration.py  test_memory_panel.py  test_metrics_panel.py  test_network.py  test_orchestrator_training.py  test_parallel_selfplay.py  test_perft.py  test_replay.py  test_session_restart.py  test_stockfish_search.py  test_stockfish_training.py
